09/3-start/iac-macro-usage/tests/fails/no_lambda_name.stderr
error: lambda needs a name
 --> tests/fails/no_lambda_name.rs:5:7
  |
5 |       lambda
  |       ^^^^^^
